--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -160,6 +160,9 @@ textarea {
     .ds44-selectLabel {
         font-size: 0.875em;
     }
+    &.ds44-time__shape {
+        padding: 1.1rem 2.5rem 1rem 0.5rem;
+    }
 }
 
 .ds44-inpLarge {
@@ -1029,6 +1032,9 @@ input[type=radio],
     span {
         display: inline;
     }
+}
+.ds44-time__shape + .ds44-reset {
+    padding-right: 1rem;
 }
 
 /**
