--- a/docs/_includes/form/field/input/planning.html
+++ b/docs/_includes/form/field/input/planning.html
@@ -13,7 +13,7 @@
       {% if include.choiceDays %}
         <div class="ds-44-choices-days">
           <h3 class="h3-like" id="idTitre3">Quels jours accueillez-vous l'enfant ?</h3>
-          {% include form/layout/checkboxes-planning.html planningName=include.creneauName label="Choisissez les jours d'accueils" choices="1:Lundi:monday,1:Mardi:tuesday,1:Mercredi:wednesday,1:Jeudi:thursday,1:Vendredi:friday,1:Samedi:saturday,1:Dimanche:sunday" required="true" list="true" %}
+          {% include form/layout/checkboxes-planning.html planningName=include.creneauName label="Choisissez les jours d'accueils" choices="1:Lundi:lundi,1:Mardi:mardi,1:Mercredi:mercredi,1:Jeudi:jeudi,1:Vendredi:vendredi,1:Samedi:samedi,1:Dimanche:dimanche" required="true" list="true" %}
         </div>
       {% endif %}
 
@@ -38,25 +38,21 @@
           </thead>
           <tbody>
           <tr data-first-line></tr>
-          <tr data-row-name="monday">
-            <td class="day">Lundi</td>
-            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" %}
-          </tr>
-          <tr data-row-name="tuesday">
+          <tr data-row-name="mardi">
             <td class="value">Mardi</td>
-            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" %}
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="mardi" %}
           </tr>
-          <tr data-row-name="wednesday">
+          <tr data-row-name="mercredi">
             <td class="value">Mercredi</td>
-            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" %}
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="mercredi" %}
           </tr>
-          <tr data-row-name="thursday">
+          <tr data-row-name="jeudi">
             <td class="value">Jeudi</td>
-            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" %}
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="jeudi" %}
           </tr>
-          <tr data-row-name="friday">
+          <tr data-row-name="vendredi">
             <td class="value">Vendredi</td>
-            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" %}
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="vendredi" %}
           </tr>
           </tbody>
         </table>
@@ -79,6 +75,7 @@
       </div>
 
     </div>
+
     {% if include.addPlanning == 1 %}
       </div>
       <div class="content-button">
