--- a/framework/scss/_libraries/_fonts.scss
+++ b/framework/scss/_libraries/_fonts.scss
@@ -49,3 +49,20 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
+// Fonts dedicated to Musée Dobrée
+
+// ----------------
+// Font call
+// ----------------
+
+
+@font-face {
+  font-family: 'Monotype Modern Std';
+  src: url('../fonts/ModernMTStd-Wide.woff2') format('woff2'),
+       url('../fonts/ModernMTStd-Wide.woff') format('woff'),
+       url('../fonts/ModernMTStd-Wide.svg#ModernMTStd-Wide') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
