--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -288,7 +288,7 @@ figure {
          left: 0;
          z-index: 1000;
          width: 100%;
-         height: 15vh;
+         height: auto;
          background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.70) 50%, rgba(0,0,0,0) 100%);
 
          .logoLA {
@@ -303,6 +303,10 @@ figure {
                   margin-left: 20px;
                   max-width: 60%;
                   line-height: 23px;
+             }
+             &:hover, &:focus {
+                 color: $ds44-light ;
+                 text-decoration: underline;
              }
          }
          .flecheAncre {
@@ -383,23 +387,40 @@ figure {
                 width: 192px;
             }
 
-            span {
-                font-family: $ds44-font-family-baseDobree;
-                font-size: 14px;
-                font-weight: normal;
-                max-width: 192px;
-                display: block;
-                margin-top: 4rem;
-                line-height: 1.2;
-            }
+            // span {
+            //     font-family: $ds44-font-family-baseDobree;
+            //     font-size: 14px;
+            //     font-weight: normal;
+            //     max-width: 192px;
+            //     display: block;
+            //     margin-top: 4rem;
+            //     line-height: 1.2;
+            // }
         }
-        .ds44-flex-container {
-            justify-content: space-between;
-             width: 100%;
-             flex-direction: row-reverse;
-             .ds44-btnIco {
-                 margin: 0;
-             }
+        .bandeau-info {
+            padding: 3rem !important;
+
+            .ds44-flex-container.mobile {
+                justify-content: space-between;
+                 width: 100%;
+                 flex-direction: row-reverse;
+                 .ds44-btnIco {
+                     margin: 0;
+                 }
+                 .horairesOuverture {
+                     margin-left:2rem;
+                 }
+            }
+            .dobree-listAccessibility a {
+                background-color: rgba(0, 0, 0, 0.4);
+                color: $ds44-light ;
+            }
+            .flecheAncre {
+                position: absolute;
+                top: 0;
+                left: calc(50% - 10px);
+            }
+
         }
     }
 
