--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -414,6 +414,7 @@ figure {
             .dobree-listAccessibility a {
                 background-color: rgba(0, 0, 0, 0.4);
                 color: $ds44-light ;
+                font-size: 0.875em;
             }
             .flecheAncre {
                 position: absolute;
