--- a/framework/scss/components/_menu.scss
+++ b/framework/scss/components/_menu.scss
@@ -503,6 +503,14 @@
         }
       }
     }
+    .dobree-menu .ds44-fieldContainer.ds44-small-fg1 {
+        text-align: center;
+        > .ds44-btnStd {
+              width: auto;
+            }
+    }
+
+
 
 }
 
