Dobree : Retour Accessibilité Franck

--- a/docs/_includes/composants-transverses/inc-horaires-ouverture.html
+++ b/docs/_includes/composants-transverses/inc-horaires-ouverture.html
@@ -1,5 +1,5 @@
-<div {{ include.surchargeDS }}>
+<p {{ include.surchargeDS }}>
     <a href="#" class="horairesOuverture dobree-link">
         Ouvert jusqu'à 17h
     </a>
-</div>
+</p>
