--- a/docs/_includes/card/card--focus-objet.html
+++ b/docs/_includes/card/card--focus-objet.html
@@ -7,8 +7,8 @@
    </div>
     <div class="ds44-card__section--horizontal">
       {% if include.date %}<p class="date">{{ include.date }}</p>{% endif %}
-      <p role="heading" {{ include.arialevel }} class="ds44-card__title">{{ include.title }}</p>
-      <button class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Découvrir l'objet</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
+      <p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title">{{ include.title }}</p>
+      <p><a class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Découvrir l'objet</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
     </div>
   </div>
 </section>
