--- a/docs/_includes/composants-transverses/inc-fleche-ancre.html
+++ b/docs/_includes/composants-transverses/inc-fleche-ancre.html
@@ -1,7 +1,7 @@
-<div {{ include.surchargeDS }}>
+<p {{ include.surchargeDS }}>
     <a href="#" class="flecheAncre">
         <picture class="">
             <img class="bounce2" src="../../assets/images/fleche-ancre.svg" alt="{% if include.flecheAlt %}{{ include.flecheAlt }}{% else %}Accéder au contenu principal{% endif %}">
         </picture>
     </a>
-</div>
+</p>
