--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -10,9 +10,9 @@
             <div class="ds44-flex-container ds44-flex-valign-center">
                 <div class="ds44-colLeft">
                         <p class="ds44-logoContainer">
-                        <a href="/" class="ds44-logoContainer">
-                            <picture class="ds44-logo ds44-hide-tinyToLarge"><img src="../../assets/images/logos/logo-musee-Dobree.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site Musée Dobrée{% endif %}"></picture>
-                            <picture class="ds44-logoDobree ds44-show-tinyToLarge ds44-hide-large"><img src="../../assets/images/logos/logo-musee-Dobree-mobile.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site Musée Dobrée{% endif %}"></picture>
+                        <a href="/" class="ds44-logoContainer" {{ include.noLink }} >
+                            <picture class="ds44-logo ds44-hide-tinyToLarge"><img src="../../assets/images/logos/logo-musee-Dobree.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site du Musée Dobrée{% endif %}"></picture>
+                            <picture class="ds44-logoDobree ds44-show-tinyToLarge ds44-hide-large"><img src="../../assets/images/logos/logo-musee-Dobree-mobile.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site du Musée Dobrée{% endif %}"></picture>
                         </a>
                         </p>
                 </div>
@@ -28,10 +28,10 @@
                             </ul>
                         </a>
                     </div>
-                    <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue" aria-label="Ouvrir le menu pour choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
-                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" aria-label="Langue sélectionné : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
+                    <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue" title="Choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
+                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" title="Langue sélectionnée : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
                     </button>
-                    <a href="#" class="ds44-btn--menu ds44-btn--contextual ds44-btnIcoText--maxi ds44--xl-padding" title="Ouvrir la billetterie"><span class="ds44-btnInnerText">Billetterie</span><i class="icon icon-long-arrow-right icon--large" aria-hidden="true"></i></a>
+                    <a href="#" class="ds44-btn--menu ds44-btn--contextual ds44-btnIcoText--maxi ds44--xl-padding"><span class="ds44-btnInnerText">Billetterie</span><i class="icon icon-long-arrow-right icon--large" aria-hidden="true"></i></a>
                     <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-btn--invert" aria-label="Ouvrir le menu de navigation" aria-controls="menu" data-open-overlay="true" id="open-menu">
                         <span class="ds44-btnInnerText">Menu</span><i class="icon icon-burger icon--large" aria-hidden="true"></i>
                     </button>
@@ -45,7 +45,7 @@
                     <a href="#"><img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français">Français</a>
                 </li>
                 <li>
-                    <a href="#"><img class="flag" src="../../assets/icons/icon-flag-en.svg" alt="Language : EN - English">English</a>
+                    <a href="#"><img class="flag" lang="en" src="../../assets/icons/icon-flag-en.svg" alt="Language : EN - English">English</a>
                 </li>
             </ul>
         </div>
