--- a/docs/_includes/menu/inc-menu-dobree-mobile.html
+++ b/docs/_includes/menu/inc-menu-dobree-mobile.html
@@ -1,15 +1,12 @@
 <div class="ds44-blocMenu dobree-menu mobile" aria-hidden="true">
     <section class="ds44-menuBox" id="menu">
-        <div class="ds44-overlay ds44-theme ds44-bg-br ds44-overlay--navNiv1 {{ include.surchargeN2 }}" role="dialog" aria-modal="true" aria-label="Menu principal" id="nav1" aria-hidden="true" >
-            <p role="heading" aria-level="1" class="visually-hidden">Menu de navigation</p>
+        <div class="ds44-overlay ds44-theme ds44-bg-br ds44-overlay--navNiv1 {{ include.surchargeN2 }}" aria-labelledby="logoMuseeDobree" role="dialog" aria-modal="true" id="nav1" aria-hidden="true" >
+            <p role="heading" aria-level="1" class="visually-hidden"  id="logoMuseeDobree">Menu de navigation</p>
             <nav role="navigation" class="ds44-navContainer ds44-flex-container--column ds44-fsb" aria-label="Menu de navigation">
                 <div class="">
                     <div class="ds44-flex-container ds44-flex-valign-center ds44-fsb">
                         <p class="ds44-logoContainer">
-                            <a href="/" class="ds44-logoContainer">
-                                <picture class="ds44-logo ds44-hide-tinyToLarge"><img src="../../assets/images/logos/logo-musee-Dobree.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site Musée Dobrée{% endif %}"></picture>
-                                <picture class="ds44-logoDobree ds44-show-tinyToLarge ds44-hide-large"><img src="../../assets/images/logos/logo-musee-Dobree-mobile.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site Musée Dobrée{% endif %}"></picture>
-                            </a>
+                            <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree-mobile.svg" alt="Musée Dobrée"></picture>
                         </p>
                         <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding choixLangue" aria-label="Ouvrir le menu pour choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
                             <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" aria-label="Langue sélectionné : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
@@ -30,7 +27,7 @@
                     </div>
                     <ul class="ds44-inner-container ds44-collapser">
                         <li class="ds44-collapser_element">
-                    		<p role="heading" aria-level="3">
+                    		<p role="heading" aria-level="2">
                     			<button type="button" class="ds44-collapser_button">Infos pratiques<i class="icon icon-down" aria-hidden="true"></i></button>
                             </p>
                     		<div class="ds44-collapser_content">
@@ -44,7 +41,7 @@
                             </div>
                         </li>
                         <li class="ds44-collapser_element">
-                    		<p role="heading" aria-level="3">
+                    		<p role="heading" aria-level="2">
                     			<button type="button" class="ds44-collapser_button">Visites<i class="icon icon-down" aria-hidden="true"></i></button>
                             </p>
                     		<div class="ds44-collapser_content">
@@ -60,7 +57,7 @@
                             </div>
                         </li>
                         <li class="ds44-collapser_element">
-                    		<p role="heading" aria-level="3">
+                    		<p role="heading" aria-level="2">
                     			<button type="button" class="ds44-collapser_button">Musée et collections<i class="icon icon-down" aria-hidden="true"></i></button>
                             </p>
                     		<div class="ds44-collapser_content">
@@ -74,7 +71,7 @@
                             </div>
                         </li>
                         <li class="ds44-collapser_element">
-                    		<p role="heading" aria-level="3">
+                    		<p role="heading" aria-level="2">
                     			<button type="button" class="ds44-collapser_button">Vous êtes<i class="icon icon-down" aria-hidden="true"></i></button>
                             </p>
                     		<div class="ds44-collapser_content">
