--- a/docs/_includes/menu/inc-menu-dobree.html
+++ b/docs/_includes/menu/inc-menu-dobree.html
@@ -1,14 +1,12 @@
 <div class="ds44-blocMenu dobree-menu" aria-hidden="true">
     <section class="ds44-menuBox" id="menu">
-        <div class="ds44-overlay ds44-theme ds44-bg-br ds44-overlay--navNiv1 {{ include.surchargeN2 }}" role="dialog" aria-modal="true" aria-label="Menu principal" id="nav1" aria-hidden="true" >
-            <p role="heading" aria-level="1" class="visually-hidden">Menu de navigation</p>
+        <div class="ds44-overlay ds44-theme ds44-bg-br ds44-overlay--navNiv1 {{ include.surchargeN2 }}" aria-labelledby="logoMuseeDobree" role="dialog" aria-modal="true" id="nav1" aria-hidden="true" >
+            <p role="heading" aria-level="1" class="visually-hidden" id="logoMuseeDobree">Menu de navigation</p>
             <nav role="navigation" class="ds44-navContainer ds44-flex-container--column" aria-label="Menu de navigation">
                 <div class="ds44-flex-container ds44-flex-valign-center">
                     <div class="ds44-colLeft">
                             <p class="ds44-logoContainer">
-                            <a href="/" class="ds44-logoContainer">
-                                <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site Musée Dobrée{% endif %}"></picture>
-                            </a>
+                                <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree.svg" alt="Musée Dobrée"></picture>
                             </p>
                     </div>
                     <div class="ds44-colRight">
@@ -31,7 +29,7 @@
                 <div class="ds44-inner-container ds44-flex-mauto">
                     <div class="ds44-multiCol3 ds44-navList">
                         <div>
-                            <h3 class="h3-like">Infos pratiques</h3>
+                            <h2 class="h3-like">Infos pratiques</h2>
                             <ul class="ds44-navListN2 ds44-list">
                                 <li>
                                     <a href="#" class="ds44-menuLink ds44-menuLink--subLvl">Horaires, tarifs</a>
@@ -51,7 +49,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h3 class="h3-like">Visites</h3>
+                            <h2 class="h3-like">Visites</h2>
                             <ul class="ds44-navListN2 ds44-list">
                                 <li>
                                     <a href="#" class="ds44-menuLink ds44-menuLink--subLvl">Parcours et conseils de visite</a>
@@ -77,7 +75,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h3 class="h3-like">Musée et collections</h3>
+                            <h2 class="h3-like">Musée et collections</h2>
                             <ul class="ds44-navListN2 ds44-list">
                                 <li>
                                     <a href="#" class="ds44-menuLink ds44-menuLink--subLvl">Histoire du musée</a>
@@ -102,7 +100,7 @@
                     <div class="ds44-inner-container ds44-flex-mauto">
                         <div class="ds44-multiCol5 ds44-navList">
                             <div>
-                                <h3 class="h3-like">Vous êtes</h3>
+                                <h2 class="h3-like">Vous êtes</h2>
                             </div>
                             <div>
                                 <ul class="ds44-navListN2 ds44-list">
