--- a/docs/_includes/card/card--dobree.html
+++ b/docs/_includes/card/card--dobree.html
@@ -6,9 +6,9 @@
     {% endif %}
     <div class="ds44-card__section">
       <div class="ds44-innerBoxContainer">
-          <p role="heading" aria-level="2" class="h4-like ds44-cardTitle" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
+          <p role="heading" aria-level="2" class="h4-like ds44-cardTitle ds44-mb-std" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
           {{ include.cardContent }}
       </div>
-      <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
+      <i class="icon icon-long-arrow-right icon--sizeL ds44-cardArrow" aria-hidden="true"></i>
     </div>
 </section>
