--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -111,6 +111,35 @@
         }
     }
 
+    &.ds44-card--dobree {
+        height: 100%;
+        margin-bottom: 0;
+
+        .ds44-card__section {
+          padding: 2rem;
+          position: relative;
+              .ds44-innerBoxContainer {
+                  padding: 0;
+            }
+        }
+
+        .ds44-cardTitle {
+            font-size: 1.25em;
+            font-family: $ds44-font-family-baseDobree;
+            font-weight: 400;
+        }
+        .ds44-docListElem {
+          font-size: 0.875em;
+          .icon-marker {
+              left: 0;
+            }
+        }
+        .ds44-cardArrow {
+          color: $ds44-dark ;
+        }
+    }
+
+
     .ds44-cardGlobalLink {
         text-decoration: none;
     }
@@ -184,6 +213,8 @@
       align-items: center;
     }
 }
+
+
 
 a.ds44-card {
   display: block;
@@ -387,15 +418,6 @@ figure[role=figure]  + .ds44-card__section {
     }
 }
 
-// Vertical card Musée Dobrée
-
-.ds44-card.ds44-card--dobree .ds44-card__section {
-  padding: 2rem;
-  position: relative;
-  .ds44-innerBoxContainer {
-      padding: 1rem;
-    }
-}
 
 .ds44-homepage-container .ds44-card {
     z-index: 10;
