--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -150,6 +150,11 @@
     padding-top: 141.43%;
 }
 
+/* Ratio img carré allongé en hauteur */
+.ds44-container-imgRatio--carreAllonge {
+    padding-top: 112%;
+}
+
 
 /* légende d'image */
 figure {
