--- a/docs/_includes/menu/inc-menu-dobree-mobile.html
+++ b/docs/_includes/menu/inc-menu-dobree-mobile.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="ds44--xl-padding ds44-flex-container ds44-small-flex-col">
                         <div class="ds44-fieldContainer ds44-fg1">
-                            {% include form/field/input/standard.html label="Saisissez un ou plusieurs mots-clé" ariaDescribedBy="inp-rech" %}
+                            {% include form/field/input/standard.html label="Saisissez un ou plusieurs mots-clé" %}
                         </div>
                         <div class="ds44-fieldContainer ds44-small-fg1">
                             <button type="submit" class="ds44-btnStd ds44-btn--invert " title="Valider votre recherche par mots-clés">
