--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -504,6 +504,10 @@
     align-self: center !important;
 }
 
+.ds44-fgap1 {
+    gap : 1em;
+}
+
 @media (max-width: $ds44-large - .0625) {
 
     .ds44-flex-wrap-large {
