Dobree : Template page d'accueil

--- a/docs/_includes/carrousel/carrousel-x3-Dobree.html
+++ b/docs/_includes/carrousel/carrousel-x3-Dobree.html
@@ -1,4 +1,4 @@
-<div class="ds44-container-large">
+<div class="">
     <div class="mod--hidden ds44-list swipper-carousel-wrap swipper-carousel-wrap--dobree ds44-posRel" data-nb-visible-slides="3">
         <div class="swiper-container">
             <ul class="swiper-wrapper ds44-list grid-3-small-1 has-gutter-l ds44-carousel-swiper">
