--- a/docs/_includes/titres/main-title-text.html
+++ b/docs/_includes/titres/main-title-text.html
@@ -1,5 +1,5 @@
 <section class="ds44--xxl-padding-tb">
-	<div class="ds44-inner-container">
+	<div class="ds44-inner-container ds44--xxl-padding-tb">
 		<div class="ds44-grid12-offset-1">
             <div class="ds44-flex-container ds44-flex-valign-center ds44-medium-flex-col ds44-fgap1 ds44-mb3">
                 <div class="ds44-fl3">
@@ -9,11 +9,9 @@
                     {{ include.textContent }}
                 </div>
             </div>
-            <div class="txtcenter">
-                <p>
-					<a href="#" class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Découvrir le musée</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
-				</p>
-            </div>
+            <p class="txtcenter">
+				<a href="#" class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Découvrir le musée</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
+			</p>
 		</div>
 	</div>
 </section>
