--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -197,12 +197,15 @@ h6, .h6-like {
 .h1-like.dobree-title{
     font-size: 3.5em;
     line-height: 1.2em;
+    margin-bottom: 3rem;
 
     @media (max-width: $ds44-medium - .625) {
         font-size: 2.5em;
+        margin-bottom: 2rem;
     }
     @media (max-width: $ds44-small - .625) {
         font-size: 1.5em;
+        margin-bottom: 1rem;
     }
 }
 
