--- a/docs/_includes/card/card--focus-objet.html
+++ b/docs/_includes/card/card--focus-objet.html
@@ -1,4 +1,4 @@
-<section class="ds44-card ds44-card--noLink ds44-card--horizontal ds44-card--focus{{ include.context }}">
+<section class="ds44-card ds44-card--noLink ds44-card--horizontal ds44-card--focus{{ include.context }} ds44-noMrg">
   <div class="ds44-flex-container ds44-flex-valign-center {{ include.direction }}">
     <div class="ds44-card__section--horizontal--img{{ include.imgdim }}">
        <picture class="">
